fixes made to overlapping hitboxes of SVG, and removed hover selector on touch devices

--- a/main.css
+++ b/main.css
@@ -27,16 +27,18 @@ body {
     display: flex;
     position: absolute;
     width: 70%;
-   height: 50%;
+   height: 30vw;
+   user-select: none;
 }
 .hero {
     position: absolute;
     width: 100%;
-    height: 150%;
+    height: 200%;
     background-repeat: no-repeat;
-    top: -31vw;
+    top: -28vw;
     background-image: url(./images/illustration-woman-online-mobile.svg);
     background-size: 100%;
+    user-select: none;
 }
 .hero-shadow {
     position: absolute;
@@ -45,6 +47,7 @@ body {
     background-image: url(./images/bg-pattern-mobile.svg);
     background-size: 100%;
     background-repeat: no-repeat;
+    user-select: none;
 }
 h1 {
     color: hsl(238, 29%, 16%);
@@ -76,9 +79,7 @@ h1 {
     margin-bottom: 1rem;
     align-self: center;
     margin-right: 1rem;
-}
-.qa-container > p:hover {
-    color: hsl(14, 88%, 65%);
+    user-select: none;
 }
 .active-question {
     font-weight: 700;
@@ -148,11 +149,13 @@ h1 {
         top: 10.5rem;
         left: -10%;
         z-index: 1;
+        user-select: none;
     }
     .hero {
         top: 4rem;
         left: -15%;
         background-image: url(./images/illustration-woman-online-desktop.svg);
+        height: calc(100% - 4rem);
     }
     .hero-shadow {
         background-image: url(./images/bg-pattern-desktop.svg);
@@ -161,4 +164,10 @@ h1 {
         left: -15%;
     }
   }
+
+  @media (pointer:fine) {
+    .qa-container > p:hover {
+        color: hsl(14, 88%, 65%);
+    }
+}
 
